--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=service-registry
 
-# DO NOT hardcode port on Render
+# Render dynamic port
 server.port=${PORT:8761}
 
-# Eureka server settings
+# Eureka server behavior
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# Important for cloud
-eureka.instance.prefer-ip-address=true
+# VERY IMPORTANT FOR CLOUD
+eureka.instance.hostname=service-registry-hcgo.onrender.com
+eureka.instance.prefer-ip-address=false
