--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.application.name=service-registry
 # Render dynamic port
 server.port=${PORT:8761}
 
+# Tell Eureka its OWN public URL (THIS IS THE KEY)
+eureka.client.service-url.defaultZone=https://service-registry-hcgo.onrender.com/eureka/
+
 # Eureka server behavior
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# VERY IMPORTANT FOR CLOUD
+# Cloud-safe settings
 eureka.instance.hostname=service-registry-hcgo.onrender.com
 eureka.instance.prefer-ip-address=false
